@@ -1,0 +1,2 @@
+# Ignore all generated files here
+*
